<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checkable="false"
            android:enabled="false"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home"
            android:visible="false" />
        <item
            android:id="@+id/nav_gallery"
            android:checkable="false"
            android:enabled="false"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery"
            android:visible="false" />
        <item
            android:id="@+id/nav_slideshow"
            android:checkable="false"
            android:enabled="false"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow"
            android:visible="false" />
        <item
            android:id="@+id/btnLogin"
            android:title="Login" />
        <item
            android:id="@+id/btnProfile"
            android:title="Profile" />
    </group>
</menu>